--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
           <h3 class="mb-0">Sobre mim</h3>
           <br>
           <p class="card-text mb-auto" align="justify">Meu nome é Guilherme Soares, tenho 17 anos, sou de Ibirá, 
-		  façso o curso técnico em Desenvolvimento de Sistemas integrado ao ensino médio e estou no 1°ano.</p>
+		  faço o curso técnico em Desenvolvimento de Sistemas integrado ao ensino médio e estou no 1°ano.</p>
         </div>
         <div class="col-auto d-none d-lg-block">
           <img src="imagens/sobremim.jpg" width="200" height="250"> 
